--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    <h1>hi</h1>
+    <h1>Encyclopedia Page</h1>
+    <<img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt">
   </body>
 </html>
