--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Encyclopedia Page</title>
   </head>
   <body>
-    <h1>Encyclopedia Page</h1>
-    <<img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt">
+    <h1>Teddy Roosevelt Encyclopedia Page</h1>  
+<img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt">
   </body>
 </html>
