--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Encyclopedia Page</title>
   </head>
   <body>
-    <h1>Teddy Roosevelt Encyclopedia Page</h1>  
-<img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt">
+    <h1>Teddy Roosevelt Encyclopedia Page</h1>
+<img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt" style="width:50vw">
   </body>
 </html>
