--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Teddy Roosevelt Encyclopedia Page</h1>
-<img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt" style="width:20vw">
+    <<a href="website URL" target='_blank'>Hyperlink Text</a>   <!--Creates a hyperlink to content-->
+<img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt">
   </body>
 </html>
