--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Teddy Roosevelt Encyclopedia Page</h1>
     <img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt">
-    <a href="website URL" target='_blank'>Hyperlink Text</a>   <!--Creates a hyperlink to content-->
+    <h2><a href="website URL" target='_blank'>Hyperlink Text</a></h2>   <!--Creates a hyperlink to content-->
   </body>
 </html>
