--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <title>Encyclopedia Page</title>
   </head>
   <body>
+<section>
     <h1>Teddy Roosevelt Encyclopedia Page</h1>
+
     <img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt">
+    <h2><em>Born in 1858 to parents Theodore Roosevelt and Martha Bulloch Roosevelt</em></h2>
+    <h3><bold>Pre-Presidency Life</bold></h3>
+</section>
+
 <section>
     <h2><a href="website URL" target='_blank'>Hyperlink Text</a></h2>   <!--Creates a hyperlink to content-->
-</section>
+</section>t
   </body>
 </html>
