--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <section>
     <h2><a href="website URL" target='_blank'>Hyperlink Text</a></h2>
     <h3>Test Change</h3>   <!--Creates a hyperlink to content-->
-</section>t
+</section>
   </body>
 </html>
