--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <img src="http://blogs.law.harvard.edu/houghton/files/2013/09/TR-riding-moose-560.7.jpg" alt="Teddy Roosevelt">
     <h2><em>Born in 1858 to parents Theodore Roosevelt and Martha Bulloch Roosevelt</em></h2>
     <h3><bold>Pre-Presidency Life</bold></h3>
+    <p>
+      <ul>
+        <li>Teddy's father worked for the Union, while his mother Martha was sending secret packages to her side of the father in the South. Both activities excited Teddy, and gave him an internal drive to join the Union's army.</li>
+        <li>As a child, Teddy was very sickly and small. His father declared to him <bold>"You have the mind but you have not the body. You must make your body."</bold>, and from a young age Teddy trained to strengthen his mind and body as equals.</li>
+        <li>Initially wanted to pursue a teaching career and majored in natural history, but switched majors to  history and government in hopes that pursuing a career in public service would honor “the greatest man he ever knew” his father.</li>
+        <li>He married Alice Hathaway Lee after multiple proposal attempts were shot down by her because he was too strange, and he also graduated Harvard as 21st in his class.</li>
+        <li>After attending Columbia Law school for one semester he dropped out because he was bored, and wrote his first book <bold><em>“History of the Naval War of 1812”.</em></bold>
+        </li>
+      </ul>
+    </p>
 </section>
 
 <section>
