--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     <p>
       <ul>
         <li>Teddy's father worked for the Union, while his mother Martha was sending secret packages to her side of the father in the South. Both activities excited Teddy, and gave him an internal drive to join the Union's army.</li>
-        <li>As a child, Teddy was very sickly and small. His father declared to him <bold>"You have the mind but you have not the body. You must make your body."</bold>, and from a young age Teddy trained to strengthen his mind and body as equals.</li>
+        <li>As a child, Teddy was very sickly and small. His father declared to him <em>"You have the mind but you have not the body. You must make your body."</em>, and from a young age Teddy trained to strengthen his mind and body as equals.</li>
         <li>Initially wanted to pursue a teaching career and majored in natural history, but switched majors to  history and government in hopes that pursuing a career in public service would honor “the greatest man he ever knew” his father.</li>
         <li>He married Alice Hathaway Lee after multiple proposal attempts were shot down by her because he was too strange, and he also graduated Harvard as 21st in his class.</li>
-        <li>After attending Columbia Law school for one semester he dropped out because he was bored, and wrote his first book <bold><em>“History of the Naval War of 1812”.</em></bold>
+        <li>After attending Columbia Law school for one semester he dropped out because he was bored, and wrote his first book <em>“History of the Naval War of 1812”.</em>
         </li>
       </ul>
+    </p>
+    <h3><bold>Presidency</bold></h3>
+    <p>
+        <li>Made a wonderful friendship with a French ambassador named France-Jean Jules Jusserland, and they would take extreme hikes in one direction and cross any rivers, rocks, etc. it was nuts.<a href="https://www.tandfonline.com/doi/abs/10.1080/14794012.2010.498116" target='_blank'>More Information</a></li>
+        <li>He passed the landmark Meat Inspection Act and Food and Drug act after reading Upton Sinclair’s <em>“The Jungle”</em></li>
+        <li></li>
     </p>
 </section>
 
