--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
     <h3><bold>Presidency</bold></h3>
     <p>
         <li>Made a wonderful friendship with a French ambassador named France-Jean Jules Jusserland, and they would take extreme hikes in one direction and cross any rivers, rocks, etc. it was nuts.<a href="https://www.tandfonline.com/doi/abs/10.1080/14794012.2010.498116" target='_blank'>More Information</a></li>
-        <li>He passed the landmark Meat Inspection Act and Food and Drug act after reading Upton Sinclair’s <em>“The Jungle”</em></li>
+        <li>He passed the landmark Meat Inspection Act and Food and Drug act after reading Upton Sinclair’s <em>“The Jungle”.</em></li>
+        <li>Was the first American president to receive the Nobel Peace Prize for facilitation the Russo-Japanese treaty.</li>
+    </p>
+</section>
+
+<section>
+    <h3><bold>Post-Presidency</bold></h3>
+    <p>
+        <li>Swore he would never run again.</li>
+        <li>Ran again, as a third party, under his "Bull Moose" party and was the only third party candidate to almost win.</li>
+        <li></li>
+        <li></li>
         <li></li>
     </p>
 </section>
