--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
       <ul>
         <li>Swore he would never run again.</li>
         <li>Ran again, as a third party, under his "Bull Moose" party and was the only third party candidate to almost win.</li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>During a speech he was shot in the chest, the bullets impact was partially stopped by his speech and glasses case in his pocket. He said <em>"it takes more than that to kill a Bull Moose"</em> and continued a 90 minutes impromptu speech before walking off stage and finally passing out from blood loss. <a href="https://en.wikipedia.org/wiki/Attempted_assassination_of_Theodore_Roosevelt" target='_blank'>More info.</a> </li>
+        <li>He died in his sleep in 1919, one quote to summarize his passing is <em>"Death had to take Roosevelt sleeping, for if he had been awake, there would have been a fight."</em></li>
       </ul>
     </p>
 </section>
 
 <section>
-    <h2><a href="website URL" target='_blank'>Hyperlink Text</a></h2>
-    <h3>Test Change</h3>   <!--Creates a hyperlink to content-->
+    <h1>Teddy Roosevelt was one of the most interesting presidents in American history, and his lasting spirit can be seen in the large swaths of protected land we still enjoy today.</h1>
+    <h2>His personal life, eccentricity, and political life are bigger than life, click <a href="https://en.wikipedia.org/wiki/Theodore_Roosevelt" target='_blank'>here</a> for his Wikipedia page with more details.</h2>  <!--Creates a hyperlink to content-->
 </section>
   </body>
 </html>
