--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 </section>
 
 <section>
-    <h2>Teddy Roosevelt was one of the most interesting presidents in American history, and his lasting spirit can be seen in the large swaths of protected land we still enjoy today.</h2>
-    <h3>His personal life, eccentricity, and political life are bigger than life, click <a href="https://en.wikipedia.org/wiki/Theodore_Roosevelt" target='_blank'>here</a> for his Wikipedia page with more details.</h3>  <!--Creates a hyperlink to content-->
+    <h3>Teddy Roosevelt was one of the most interesting presidents in American history, and his lasting spirit can be seen in the large swaths of protected land we still enjoy today.</h3>
+    <p>His personal life, eccentricity, and political life are bigger than life, click <a href="https://en.wikipedia.org/wiki/Theodore_Roosevelt" target='_blank'>here</a> for his Wikipedia page with more details.</p>  <!--Creates a hyperlink to content-->
 </section>
   </body>
 </html>
