--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </section>
 
 <section>
-    <h3><bold>Presidency</bold></h3>
+    <h3>Presidency</h3>
     <p>
       <ul>
         <li>Made a wonderful friendship with a French ambassador named France-Jean Jules Jusserland, and they would take extreme hikes in one direction and cross any rivers, rocks, etc. it was nuts.<a href="https://www.tandfonline.com/doi/abs/10.1080/14794012.2010.498116" target='_blank'>More Information</a></li>
@@ -35,7 +35,7 @@
 </section>
 
 <section>
-    <h3><bold>Post-Presidency</bold></h3>
+    <h3>Post-Presidency</h3>
     <p>
       <ul>
         <li>Swore he would never run again.</li>
