--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2><em>Born in 1858 to parents Theodore Roosevelt and Martha Bulloch Roosevelt</em></h2>
     <h3>Pre-Presidency Life</h3>
     <p>
+      Teddy Roosevelt had a very interesting upbringing, and always showed a broad curiosity.
       <ul>
         <li>Teddy's father worked for the Union, while his mother Martha was sending secret packages to her side of the father in the South. Both activities excited Teddy, and gave him an internal drive to join the Union's army.</li>
         <li>As a child, Teddy was very sickly and small. His father declared to him <em>"You have the mind but you have not the body. You must make your body."</em>, and from a young age Teddy trained to strengthen his mind and body as equals.</li>
@@ -25,6 +26,7 @@
 <section>
     <h3>Presidency</h3>
     <p>
+      During his presidency, he accumulated some cool stories and awards.
       <ul>
         <li>Made a wonderful friendship with a French ambassador named France-Jean Jules Jusserland, and they would take extreme hikes in one direction and cross any rivers, rocks, etc. it was nuts.<a href="https://www.tandfonline.com/doi/abs/10.1080/14794012.2010.498116" target='_blank'>More Information</a></li>
         <li>He passed the landmark Meat Inspection Act and Food and Drug act after reading Upton Sinclair’s <em>“The Jungle”.</em></li>
@@ -36,8 +38,9 @@
 <section>
     <h3>Post-Presidency</h3>
     <p>
+      His post-presidential moments are possibly the most interesting.
       <ul>
-        <li>Swore he would never run again.</li>
+        <li>He swore he would never run again.</li>
         <li>Ran again, as a third party, under his "Bull Moose" party and was the only third party candidate to almost win.</li>
         <li>During a speech he was shot in the chest, the bullets impact was partially stopped by his speech and glasses case in his pocket. He said <em>"it takes more than that to kill a Bull Moose"</em> and continued a 90 minutes impromptu speech before walking off stage and finally passing out from blood loss. <a href="https://en.wikipedia.org/wiki/Attempted_assassination_of_Theodore_Roosevelt" target='_blank'>More info.</a> </li>
         <li>He died in his sleep in 1919, one quote to summarize his passing is <em>"Death had to take Roosevelt sleeping, for if he had been awake, there would have been a fight."</em></li>
